objects/DMAPP__DM_Opportunity_Competitor_Extra__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing extra competitor information for each competitor associated with the Opportunity</description>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Extra__c</fullName>
        <label>DM Opportunity Extra</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipLabel>Opportunity Competitor Extras</relationshipLabel>
        <relationshipName>DM_Opportunity_Competitor_Extras</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__OpportunityCompetitor__c</fullName>
        <label>OpportunityCompetitor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strategy__c</fullName>
        <label>Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Frontal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flanking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fragment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Develop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__Strengths__c</fullName>
        <label>Strengths</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Weaknesses__c</fullName>
        <label>Weaknesses</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Opportunity Competitor Extra</label>
    <nameField>
        <label>Opportunity Competitor Extra Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Competitor Extras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>